# bmce

./: .gitmodules  .project.py  .ycm_extra_conf.py  CMakeLists.txt  README.md
arcade/: CMakeLists.txt
arcade/src/: main.cpp  main.old.cpp
cmake/: Findassimp.cmake
core/: CMakeLists.txt
core/data/shaders/: lesson.fs  lesson.vs
core/include/bmce/core/: camera.h  colortypes.h  common.h  constants.h  engine.h  event.h  fileimport.h  keyboard.h  mainloop.h  mathlib.h  mesh.h  mouse.h  object.h  pos2d.h  rect.h  renderer.h  scene.h  signal.h  signalbase.h  signaltarget.h  slot.h  texture.h  threadcontext.h  types.h  utils.h
core/include/bmce/core/errors/: commonerror.h
core/include/bmce/core/gl/: gl.h  glmesh.h  glrenderer.h  glshader.h  gltexture.h
core/include/bmce/core/log/: consolelogger.h  log.h  loggable.h  logger.h
core/src/: engine.cpp  fileimport.cpp  keyboard.cpp  mathlib.cpp  mesh.cpp  signal.cpp  signalbase.cpp  signaltarget.cpp  texture.cpp  utils.cpp
core/src/gl/: glmesh.cpp  glrenderer.cpp  glshader.cpp  gltexture.cpp
core/src/log/: log.cpp  loggable.cpp
core/tests/: CMakeLists.txt
core/tests/mathlib_tests/: CMakeLists.txt  test_quaternion.cpp
gui/: CMakeLists.txt
gui/include/bmce/gui/: faceid.h  font.h  gui.h  textconstraints.h  textrender.h  ustring.h
gui/src/: faceid.cpp  textconstraints.cpp  textrender.cpp
gui/tests/: CMakeLists.txt
gui/tests/font_tests/: CMakeLists.txt  test_font.cpp
